--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
-	"type": "commonjs",
+	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "ts-node src/index.ts",
+		"build": "tsc -p tsconfig.json"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"@types/fs-extra": "^9.0.13",
 		"@types/inquirer": "^9.0.2",
+		"@types/prettier": "^2.7.1",
+		"chalk": "^5.1.2",
 		"commander": "^9.4.1",
 		"fs-extra": "^10.1.0",
 		"inquirer": "^8.0.0",
+		"ora": "^6.1.2",
 		"path": "^0.12.7",
 		"prettier": "^2.7.1"
 	}
