--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "compilerOptions": {
-    "skipLibCheck": true,
-    "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "outDir": "./build",
+    "outDir": "build",
     "rootDir": "src",
+    "module": "ES2020",
+    "target": "ES2020",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "removeComments": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
   },
-  "include": [
-    "src/**/*"
-  ],
   "exclude": [
-    "node_modules"
-  ],
+    "node_modules",
+    "template"
+  ]
 }
